--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Tests and Lint
+    name: testing and linting
     steps:
       - uses: actions/checkout@v4
 
